--- a/resume/education.tex
+++ b/resume/education.tex
@@ -16,9 +16,9 @@
     {Buffalo, NY} % Location
     {Sep. 2015 - Aug. 2017} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Major GPA 3.76}
-      \end{cvitems}
+      %\begin{cvitems} % Description(s) bullet points
+      %  \item {Major GPA 3.76}
+      %\end{cvitems}
     }
 
 %---------------------------------------------------------
