--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,17 +11,103 @@
 
 %---------------------------------------------------------
   \cventry
+    {Staff Software Engineer} % Job Title
+    {LegalZoom Inc.}
+    {New York, NY} % Location
+    {Jun. 2024 - Feb. 2026} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        % Overview
+        \item \textbf{Tech Lead} for attorney customer consultation platform and intellectual property product line
+        % Accomplishments
+        \item Designed and implemented full search engine solution for \textbf{LegalZoom Trademark Search} to increase traffic and engagement using \textbf{AWS CloudFormation} technologies. Documentation written in \textbf{C4 model} architecture diagrams and \textbf{event modeling}
+        % Responsibilities
+        \item Takes ownership of \textbf{technical planning, decisions, and quality execution} of an application in partnership with delivery leadership.
+        \item Guides team to level up engineering capacity and skill set 
+      \end{cvitems}
+    }
+    
+  \cventry
+    {Lead Software Crafter} % Job Title
+    {8th Light Inc.}
+    {New York, NY} % Location
+    {Mar. 2024 - May. 2024} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        % Overview
+        \item Collaborate with clients to balance technical considerations with product needs to create long lasting value
+        \item Takes ownership of technical planning, decisions, and quality execution of an application in partnership with delivery leadership.
+        \item Guides team to learn new languages, technologies or stacks as needed for the project, providing ad hoc and 360 degree feedback.
+        % Accomplishments
+        % Responsibilities
+        \item Represent 8th Light in accordance to code of conduct. Participate in 8th Light initiatives
+      \end{cvitems}
+    }
+
+  \cventry
+    {Team Lead} % Job Title
+    {LegalZoom Experts Commercialization - 8th Light Inc.}
+    {New York, NY} % Location
+    {Feb. 2023 - Mar. 2024} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        % Overview
+        \item Lead team of engineers to oversee and execute the streamlining of new product launch under the Legal Zoom Tax and Experts product line
+        % Accomplishments
+        % Responsibilities
+        \item Design C4 models architecture diagrams to capture system requirements
+        \item Collaborate with product manager to facilitate on time delivery for projects
+        \item Identify emerging trends and technologies to introduce company wide. Represent 8th Light in accordance to code of conduct. Participate in 8th Light initiatives
+      \end{cvitems}
+    }
+  
+  \cventry
+    {Senior Software Crafter} % Job Title
+    {LegalZoom Tax Service - 8th Light Inc.}
+    {New York, NY} % Location
+    {Jun. 2022 - Feb. 2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        % Overview
+        \item Collaborate with LegalZoom Tax Service team to move forward business transformation initiatives to offer services that connect small businesses with tax experts to help businesses with tax needs and get maximum tax savings
+        % Accomplishments
+        % Responsibilities
+        \item Participate in daily/weekly standups to give updates and recommendations
+        \item Identify emerging trends and technologies to introduce company wide. Represent 8th Light in accordance to code of conduct. Participate in 8th Light initiatives
+      \end{cvitems}
+    }
+
+  \cventry
+    {Senior Software Crafter} % Job Title
+    {8th Light Inc.}
+    {New York, NY} % Location
+    {Nov. 2021 - Mar. 2024} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        % Overview
+        \item Collaborate with clients to balance technical considerations with product needs to create long lasting value
+        % Accomplishments
+        % Responsibilities
+        \item Identify emerging trends and technologies to introduce company wide
+        \item Represent 8th Light in accordance to code of conduct. Participate in 8th Light initiatives
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Software Engineer III - Analytics API} % Job title
     {FactSet Research Systems Inc.} % Organization
     {New York, NY} % Location
-    {Apr. 2020 - PRESENT} % Date(s)
+    {Apr. 2020 - Nov. 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         % Overview
         \item Collaborate and work with engineering team that span the globe to capture new business and revenue source with FactSet's Analytics API product
         % Accomplishments
+        \item Re-purposed legacy trading software from business acquisition into proof of concept \textbf{API based Execution Management System} to open new revenue in trading platform services
         \item Designed and implemented automated \textbf{blue green deployment} in \textbf{Jenkins} for all client facing API's to ensure zero down time during production release and deployment
         \item Added feature in \textbf{.Net Core} codebase to improve logging and visibility of E2E workflow to \textbf{reduce} client support turnaround from \textbf{hours} into \textbf{minutes}
+        \item Designed \textbf{parallel architecture} for continuous integration to improve deployment and testing times by \textbf{20X speed increase} (40 minutes to 2 minutes)
         % Responsibilities
         \item Participated in on-call rotations to respond to any production issues or client inquiries. 
       \end{cvitems}
