--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -11,10 +11,13 @@
 
 %---------------------------------------------------------
 \begin{cvitems}
+    \item{\textbf{One years} of staff engineer \textbf{Tech Leadership} to guide, mentor, and lead teams to create and support software platforms}
+    \item{\textbf{Two years} of tech consulting offering \textbf{Organizational Development} to inspire, mentor, and support client teams while creating software solutions}
+    \item{\textbf{Two years} of creating and devising solutions for \textbf{FinTech Digital Transformation Strategy} revolving around \textbf{API As A Service}}
     \item{\textbf{Three years} of creating and devising solutions for \textbf{AWS Docker} deployed micro services to replace legacy on premise monoliths following \textbf{twelve-factor app} principles}
     \item{\textbf{One year} of supporting \textbf{SQL document storage} solution for internal teams}
     \item{Extensive back end work in \textbf{scale-able architecture} and \textbf{REST API} using .Net Core}
     \item{Successfully implemented company wide \textbf{automated QA} initiative with code base boasting an over \textbf{75\% unit test coverage} and comprehensive suite of E2E tests to run for every deployment}
-    \item{Mentored junior teammates on \textbf{Extreme Programming}, \textbf{Test Driven Development}}, and \textbf{SOLID} principles
+    \item{Mentored junior teammates on \textbf{Functional Programming}, \textbf{Domain Driven Design}, \textbf{Extreme Programming}, \textbf{Test Driven Development}}, and \textbf{SOLID} principles
 \end{cvitems}
 \end{cvparagraph}
