--- a/resume/technicalskills.tex
+++ b/resume/technicalskills.tex
@@ -7,6 +7,6 @@
 %-------------------------------------------------------------------------------
 
 {\fontsize{8pt}{1em}\bodyfont\scshape\color{graytext}
- Csharp, Typescript, Javascript, Rust, \textbf{SQL Server}, Elastic Search, .Net Core 2+, .Net MVC, NodeJS, ExpressJS, Microsoft Orleans, ELK stack Scrum, Jira, \textbf{Continuous Integration}, TDD, Simple Design, Extreme Programming
+ Functional programming, Haskell, Scheme/Lisp, Clojure, Csharp, Typescript, Javascript, Rust, \textbf{SQL Server}, Elastic Search, Kotlin, .Net, .Net MVC, NodeJS, ExpressJS, Microsoft Orleans, ELK stack Scrum, Jira, \textbf{Continuous Integration}, Data Oriented Programming, TDD, Simple Design, Extreme Programming, Domain Driven Design
 }
 
