Updates from Overleaf

--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
 \begin{cvitems}
-    \item{\textbf{One years} of staff engineer \textbf{Tech Leadership} to guide, mentor, and lead teams to create and support software platforms}
+    \item{\textbf{One plus years} of staff engineer \textbf{Tech Leadership} to guide, mentor, and lead teams to create and support software platforms}
     \item{\textbf{Two years} of tech consulting offering \textbf{Organizational Development} to inspire, mentor, and support client teams while creating software solutions}
     \item{\textbf{Two years} of creating and devising solutions for \textbf{FinTech Digital Transformation Strategy} revolving around \textbf{API As A Service}}
     \item{\textbf{Three years} of creating and devising solutions for \textbf{AWS Docker} deployed micro services to replace legacy on premise monoliths following \textbf{twelve-factor app} principles}
